# digital-fidget-spinner

./: .gitignore  README.md
.github/workflows/: release.yml
apps/chetris/: BOTTLENECK_ANALYSIS.md  README.md  index.html  package-lock.json  package.json  settings.html  start.bat  start.ps1
apps/chetris/js/: ai.js  app.js  board.js  constants.js  effects.js  game.js  input.js  puyo-ai.js  puyo-board.js  puyo-constants.js  renderer.js  settings.js  themes.js
apps/chetris/scripts/: copy-dist.js
apps/chetris/src-tauri/: Cargo.toml  tauri.conf.json
apps/chetris/src-tauri/capabilities/: default.json
apps/chetris/src-tauri/src/: lib.rs  main.rs
apps/chetris/tests/: ai.test.js  board.test.js  effects.test.js  game.test.js  loader.js  perf.test.js  puyo-ai.test.js  puyo-board.test.js  renderer.test.js  settings.test.js  setup.js  themes.test.js  user-flow.test.js
